# ollama-studies

./: Modelfile  README.md  pyproject.toml  requirements.txt
ollamastudy/: app.py  app2.py  app3.py  app4.py
ollamastudy/creating-model/: Sky.Modelfile
ollamastudy/daily-tip/: daily-tip.py
ollamastudy/sentiment-analysis/: sentiment-analysis-json.py  sentiment-analysis.py
