[tool.poetry]
name = "ollamastudy"
version = "0.1.0"
description = ""
authors = ["Wildiney Di Masi <wildiney@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
ollama = "^0.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
